# content_approval

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  Тестовое задание В.md
app/: config.py  main.py
app/api/: deps.py  errors.py  idempotency.py
app/api/v1/: approval_requests.py
app/auth/: dependencies.py  exceptions.py  models.py  provider.py  stub.py
app/db/: base.py  models.py  repository.py  session.py
app/domain/: entities.py  enums.py  exceptions.py  ids.py  repository.py  service.py
app/observability/: context.py  logging.py  middleware.py  redaction.py
app/schemas/: approval_request.py  common.py
migrations/: env.py
migrations/versions/: 1fe27f129dda_initial_schema.py
tests/: conftest.py  helpers.py  test_approval_requests.py  test_auth.py  test_decisions.py  test_errors.py  test_health.py  test_idempotency.py  test_no_sensitive_data_leakage.py  test_observability.py
